[package]
name = "ctx"
version = "0.1.0"
authors = ["Volodymyr Mihdal <volodymyr.migdal@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["full", "visit"] }
syn-inline-mod = "0.6.0"
